# linkedin-bubble-analyzer

./: .gitignore  CLAUDE.md  README.md  algorithm.md  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  what_is_your_bubble_project_prompt.md
backend/: main.py
backend/clustering/: cluster_labeler.py  topic_clusterer.py
backend/core/: config.py  database.py  dependencies.py  exceptions.py
backend/metrics/: bubble_score.py
backend/models/: analysis.py  post.py
backend/processing/: text_cleaner.py
backend/repositories/: analysis_repository.py  post_repository.py
backend/routes/: analysis.py  posts.py  visualization.py
backend/schemas/: analysis_schemas.py  post_schemas.py  visualization_schemas.py
backend/services/: analysis_service.py  bubble_score_service.py  clustering_service.py  post_service.py  similarity_service.py  visualization_service.py
backend/similarity/: cosine_similarity.py  embedding_generator.py  simhash_analyzer.py
backend/visualization/: chart_builder.py  umap_projector.py
data/sample/: sample_posts.json
tests/: conftest.py
tests/integration/: test_analysis_pipeline.py  test_analysis_route.py  test_health_route.py  test_posts_route.py  test_visualization_route.py
tests/unit/: test_analysis_repository.py  test_analysis_service.py  test_bubble_score.py  test_bubble_score_service.py  test_chart_builder.py  test_cluster_labeler.py  test_clustering_service.py  test_cosine_similarity.py  test_embedding_generator.py  test_post_repository.py  test_post_service.py  test_simhash_analyzer.py  test_similarity_service.py  test_text_cleaner.py  test_topic_clusterer.py  (+2 more)
