[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-bubble-analyzer"
version = "0.1.0"
description = "Analyze your LinkedIn feed to reveal your information bubble"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "simhash>=2.1.2",
    "sqlalchemy>=2.0.48",
    "umap-learn>=0.5.11",
    "uvicorn[standard]>=0.41.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that download ML models or run heavy computations",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
